--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,35 @@ main {
     padding: 1rem;
 }
 
+#canvas-container {
+    width: 75%;
+    height: 75%;
+}
+
+#main-canvas {
+    width: 100%;
+    height: 100%;
+}
+
 #info li {
+    margin-top: 1rem;
     margin-left: 1rem;
+}
+
+#info h1 {
+    font-size: x-large;
+    font-weight: bold;
+}
+
+#description-container h1, #description-container h2 {
+    font-size: x-large;
+    font-weight: bold;
+}
+
+#description-container h2 {
+    font-size: large;
+}
+
+#description-container p {
+    margin: 0.5rem 0.5rem 0.5rem 1rem;
 }
